--- a/_modules/scripts/engine/action.html
+++ b/_modules/scripts/engine/action.html
@@ -221,7 +221,8 @@
 <span class="sd">    Action taken during the game. A container for Effects.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">name</span><span class="p">:</span> <span class="nb">str</span>
+    <span class="n">name</span><span class="p">:</span> <span class="nb">str</span>  <span class="c1"># name of the class</span>
+    <span class="n">f_name</span><span class="p">:</span> <span class="nb">str</span>  <span class="c1"># friendly name, can include spaces, slashes etc.</span>
     <span class="n">description</span><span class="p">:</span> <span class="nb">str</span>
     <span class="n">icon_path</span><span class="p">:</span> <span class="nb">str</span>
     <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TargetTagType</span><span class="p">]</span>
@@ -254,17 +255,18 @@
     <span class="n">base_cooldown</span><span class="p">:</span> <span class="nb">int</span>
     <span class="n">targeting_method</span><span class="p">:</span> <span class="n">TargetingMethodType</span>
     <span class="n">target_directions</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">DirectionType</span><span class="p">]</span>
+    <span class="nb">range</span><span class="p">:</span> <span class="nb">int</span>
     <span class="n">uses_projectile</span><span class="p">:</span> <span class="nb">bool</span>
     <span class="n">projectile_data</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ProjectileData</span><span class="p">]</span>
-
-    <span class="c1"># vars needed to keep track of changes</span>
-    <span class="n">ignore_entities</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">EntityID</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># to ensure entity not hit more than once</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">target_tile</span><span class="p">:</span> <span class="n">Tile</span><span class="p">,</span> <span class="n">direction</span><span class="p">:</span> <span class="n">DirectionType</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">user</span> <span class="o">=</span> <span class="n">user</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">target_tile</span> <span class="o">=</span> <span class="n">target_tile</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">direction</span> <span class="o">=</span> <span class="n">direction</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">projectile</span> <span class="o">=</span> <span class="kc">None</span>
+
+        <span class="c1"># vars needed to keep track of changes</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">ignore_entities</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">EntityID</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># to ensure entity not hit more than once</span>
 
 <div class="viewcode-block" id="Skill.build_effects"><a class="viewcode-back" href="../../../scripts.engine.html#scripts.engine.action.Skill.build_effects">[docs]</a>    <span class="nd">@abstractmethod</span>
     <span class="k">def</span> <span class="nf">build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
@@ -288,12 +290,14 @@
         <span class="kn">from</span> <span class="nn">scripts.engine</span> <span class="kn">import</span> <span class="n">library</span>
 
         <span class="bp">cls</span><span class="o">.</span><span class="n">data</span> <span class="o">=</span> <span class="n">library</span><span class="o">.</span><span class="n">SKILLS</span><span class="p">[</span><span class="bp">cls</span><span class="o">.</span><span class="vm">__name__</span><span class="p">]</span>
-        <span class="bp">cls</span><span class="o">.</span><span class="n">name</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">name</span>
+        <span class="bp">cls</span><span class="o">.</span><span class="n">name</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="vm">__name__</span>
+        <span class="bp">cls</span><span class="o">.</span><span class="n">f_name</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">name</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">target_tags</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">target_tags</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">description</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">description</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">icon_path</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">icon_path</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">resource_type</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">resource_type</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">resource_cost</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">resource_cost</span>
+        <span class="bp">cls</span><span class="o">.</span><span class="n">range</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">range</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">time_cost</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">time_cost</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">base_cooldown</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">cooldown</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">targeting_method</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">targeting_method</span>
@@ -410,7 +414,7 @@
         <span class="kn">from</span> <span class="nn">scripts.engine</span> <span class="kn">import</span> <span class="n">library</span>
 
         <span class="bp">cls</span><span class="o">.</span><span class="n">data</span> <span class="o">=</span> <span class="n">library</span><span class="o">.</span><span class="n">AFFLICTIONS</span><span class="p">[</span><span class="bp">cls</span><span class="o">.</span><span class="vm">__name__</span><span class="p">]</span>
-        <span class="bp">cls</span><span class="o">.</span><span class="n">name</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">name</span>
+        <span class="bp">cls</span><span class="o">.</span><span class="n">f_name</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">name</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">description</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">description</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">icon_path</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">icon_path</span>
         <span class="bp">cls</span><span class="o">.</span><span class="n">category</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">category</span>
