--- a/_modules/scripts/engine/chronicle.html
+++ b/_modules/scripts/engine/chronicle.html
@@ -194,7 +194,7 @@
 <span class="kn">from</span> <span class="nn">scripts.engine.component</span> <span class="kn">import</span> <span class="n">Afflictions</span><span class="p">,</span> <span class="n">Knowledge</span><span class="p">,</span> <span class="n">Tracked</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.constants</span> <span class="kn">import</span> <span class="n">INFINITE</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.data</span> <span class="kn">import</span> <span class="n">store</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.systems</span> <span class="kn">import</span> <span class="n">reaction</span><span class="p">,</span> <span class="n">vision</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.systems</span> <span class="kn">import</span> <span class="n">behaviour</span><span class="p">,</span> <span class="n">reaction</span><span class="p">,</span> <span class="n">vision</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
     <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Tuple</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span>
@@ -214,10 +214,16 @@
     <span class="n">new_queue</span> <span class="o">=</span> <span class="p">{}</span>
     <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">queries</span>
 
-    <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="p">(</span><span class="n">tracked</span><span class="p">,)</span> <span class="ow">in</span> <span class="n">queries</span><span class="o">.</span><span class="n">tracked</span><span class="p">:</span>
+    <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="p">(</span><span class="n">is_active</span><span class="p">,</span> <span class="n">tracked</span><span class="p">,)</span> <span class="ow">in</span> <span class="n">queries</span><span class="o">.</span><span class="n">active_and_tracked</span><span class="p">:</span>
         <span class="k">if</span> <span class="n">entity</span> <span class="o">!=</span> <span class="n">entity_to_exclude</span><span class="p">:</span>
-            <span class="n">tracked</span> <span class="o">=</span> <span class="n">cast</span><span class="p">(</span><span class="n">Tracked</span><span class="p">,</span> <span class="n">tracked</span><span class="p">)</span>
+            <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">tracked</span><span class="p">,</span> <span class="n">Tracked</span><span class="p">)</span>
             <span class="n">new_queue</span><span class="p">[</span><span class="n">entity</span><span class="p">]</span> <span class="o">=</span> <span class="n">tracked</span><span class="o">.</span><span class="n">time_spent</span>
+
+    <span class="c1"># did we actually allocate to anyone?</span>
+    <span class="k">if</span> <span class="ow">not</span> <span class="n">new_queue</span><span class="p">:</span>
+        <span class="c1"># add player to queue</span>
+        <span class="n">new_queue</span><span class="p">[</span><span class="n">world</span><span class="o">.</span><span class="n">get_player</span><span class="p">()]</span> <span class="o">=</span> <span class="n">get_time</span><span class="p">()</span>
+
     <span class="n">set_turn_queue</span><span class="p">(</span><span class="n">new_queue</span><span class="p">)</span>
 
     <span class="c1"># get the next entity in the queue and set as new turn holder</span>
@@ -261,6 +267,7 @@
 
     <span class="c1"># update visibility</span>
     <span class="c1"># TODO - implement scheduling so this doesnt need to be called here</span>
+    <span class="n">behaviour</span><span class="o">.</span><span class="n">process_activations</span><span class="p">()</span>  <span class="c1"># must be first otherwise wrong entities active</span>
     <span class="n">vision</span><span class="o">.</span><span class="n">process_light_map</span><span class="p">()</span>
     <span class="n">vision</span><span class="o">.</span><span class="n">process_fov</span><span class="p">()</span>
     <span class="n">vision</span><span class="o">.</span><span class="n">process_tile_visibility</span><span class="p">()</span>
@@ -282,7 +289,7 @@
     <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">queries</span>
 
     <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="p">(</span><span class="n">knowledge</span><span class="p">,)</span> <span class="ow">in</span> <span class="n">queries</span><span class="o">.</span><span class="n">knowledge</span><span class="p">:</span>
-        <span class="n">knowledge</span> <span class="o">=</span> <span class="n">cast</span><span class="p">(</span><span class="n">Knowledge</span><span class="p">,</span> <span class="n">knowledge</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">knowledge</span><span class="p">,</span> <span class="n">Knowledge</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">skill_name</span> <span class="ow">in</span> <span class="n">knowledge</span><span class="o">.</span><span class="n">skill_names</span><span class="p">:</span>
             <span class="n">skill_cooldown</span> <span class="o">=</span> <span class="n">knowledge</span><span class="o">.</span><span class="n">cooldowns</span><span class="p">[</span><span class="n">skill_name</span><span class="p">]</span>
             <span class="k">if</span> <span class="n">skill_cooldown</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
