--- a/_modules/scripts/engine/core/definitions.html
+++ b/_modules/scripts/engine/core/definitions.html
@@ -532,6 +532,7 @@
     <span class="c1"># how does it travel from the user?</span>
     <span class="n">targeting_method</span><span class="p">:</span> <span class="n">TargetingMethodType</span> <span class="o">=</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">TARGET</span>
     <span class="n">target_directions</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">DirectionType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
+    <span class="nb">range</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span>
 
     <span class="c1"># what is the area of effect?</span>
     <span class="n">shape</span><span class="p">:</span> <span class="n">ShapeType</span> <span class="o">=</span> <span class="n">Shape</span><span class="o">.</span><span class="n">TARGET</span>
