--- a/_modules/scripts/nqp/processors/display.html
+++ b/_modules/scripts/nqp/processors/display.html
@@ -210,8 +210,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># move entities screen position towards target</span>
     <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="p">(</span><span class="n">aesthetic</span><span class="p">,)</span> <span class="ow">in</span> <span class="n">queries</span><span class="o">.</span><span class="n">aesthetic</span><span class="p">:</span>
-        <span class="c1"># cast for typing</span>
-        <span class="n">aesthetic</span> <span class="o">=</span> <span class="n">cast</span><span class="p">(</span><span class="n">Aesthetic</span><span class="p">,</span> <span class="n">aesthetic</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">aesthetic</span><span class="p">,</span> <span class="n">Aesthetic</span><span class="p">)</span>
 
         <span class="n">max_duration</span> <span class="o">=</span> <span class="mf">0.5</span>
 
